# Furnit

./: .gitattributes  .gitignore  .periphery.yml  CLAUDE.md  CreateML.py  DISK_BOTTLENECKS_REPORT.md  FirebaseConfigChecker.swift  MaskKernels.metal  PhoneAuthDebugView.swift  PhoneNumberTestingHelper.swift  Podfile  README.md  UpdateLocalizationStrings.swift  analyze_yolo_structure.py  blacklist.json  check_coreml_export.py  compare_all_detections.py  compare_pt_vs_coreml.py  convert_to_coreml_fp32.py  debug_coreml_output.py  test_model_structure.py  test_yoloe26_seg.py  update_profile_pdf.py
.claude/: settings.local.json
.cursor/rules/: android-build-preference.mdc  ios-build-preference.mdc  model-usage-preference.mdc
.github/: copilot-instructions.md
.github/workflows/: convert-onnx-to-tflite.yml  convert-onnx-to-tflite.yml.disabled  periphery-unused-code.yml
.tmp_model_inspect/mpl/: fontlist-v390.json
Furnit/: CHANGELOG.md  ContentView.swift  FurnitApp.swift  Info.plist  PrivacyInfo.xcprivacy  yolo26.py
Furnit.xcodeproj/: VulkanMaskCompute.kt  cppNativeBLAS.cpp  project.pbxproj  shadersCompositeShader.comp  shadersMaskComputeShader.comp
Furnit.xcworkspace/: contents.xcworkspacedata
Furnit/AR/: AR3DModelProcessor.swift  ARButton.swift  ARCameraManager.swift  ARKitCameraManager.swift  ARObjectPlacementManager.swift  MetalRenderingPipeline.swift  ObjectSegmentationProcessor.swift  RealityKitObjectPlacementManager.swift  SCNViewCaptureManager.swift  Shaders.metal
Furnit/Authentication/: FirebaseTestView.swift  (+4 more)
FurnitTests/: CropTests.swift  FurnitTests.swift  FurnitureFitTests.swift  GlobalCameraControllerTests.swift  ImageBasedTests.swift  IntegrationTests.swift  ListScreenRoomOpenTests.swift  RealityKitGestureTests.swift  SharpRoomTests.swift  SharpRoomViewTests.swift  SharpRoomZoomTests.swift  VLMIntegrationTests.swift  YoloRatioCalibrationTests.swift
ShanjeevRAG/: .env.example  .gitignore  README.md  config.yaml  ingest.py  query.py  requirements.txt
abap-ai-toolkit/: .env.example  .gitignore  ABAP_AI_Toolkit_Business_Plan.docx  ABAP_AI_Toolkit_Complete_Context.md  README.md  Startup-Business-Plan-Template.docx  abap-ai-toolkit.code-workspace  config.yaml  create_business_plan_docx.py  requirements.txt  run_pipeline.py
android/: APPLE_REVIEW_SWIFT_AUDIT.md  CHANGELOG.md  README.md  README_ANDROID.md  README_PYTHON_KOTLIN_PARITY.md  ULTRALYTICS_VENV.md  assemble_friend_apk_shell_only.sh  assemble_friend_apk_with_models.sh  assemble_friend_apk_without_models.sh  backup_executorch_int8_models.sh  backup_executorch_models.sh  backup_models_v3_mar10th2026.sh  build.gradle  build_executorch_vulkan_for_furnit.sh  build_fpn_bridge.py  build_gaussian_model.py  build_ncnn_heads.py  build_part1_test_no_vulkan.sh  build_simple_decoder.py  check_sharp_models_on_device.sh  convert_onnx_fp16.py  create_lightweight_sharp.py  create_truncated_sharp.py  enable_vulkan_profiling.sh  environment-executorch-export.yml  export_complete_sharp.py  export_fpn_decoder.py  export_full_sharp_ncnn.py  export_mobilenet.py  export_onnx_part1_chunks.py  export_onnx_part4_chunks.py  export_part12_portable.sh  export_sharp_all_components.py  export_sharp_executorch_all.py  export_sharp_executorch_chunked_part4_portable_only.sh  export_sharp_executorch_components.py  export_sharp_executorch_fp16.py  export_sharp_executorch_int8.py  export_sharp_executorch_int8_split4.py  export_sharp_executorch_split.py  (+55 more)
android/app/src/main/cpp/: CMakeLists.txt  NCNN_SETUP.md  blas_utils.h  sharp_custom_layers.h  sharp_executorch_full.cpp  sharp_executorch_full_common.cpp  sharp_executorch_full_internal.h  sharp_executorch_full_vulkan.cpp  sharp_executorch_tiles.cpp  sharp_ncnn.cpp  sharp_ncnn_components.h  vulkan_1536_test.cpp  yoloe_ncnn.cpp
bathroom_photos/: bathroom_v2.HEIC
docs/: CHECK_APP_MEMORY.md  IOS_ANDROID_YOLO_MODEL_PARITY.md  IOS_FURNITURE_FIT_ONNX_STYLE_PIPELINE.md  IOS_ROOM_FURNITURE_DIMENSIONS_AND_OVERLAY.md  Invention-Disclosure-Furnit-IDF.docx  Invention-Disclosure-Furnit-IDF.md  NDA - Paafekt Innovations Private Limited.docx  NDA_ABAP_AI_Toolkit.md  NDA_Paafekt.md  ON_DEMAND_RESOURCES.md  PAAFEKT_STANDARDS.md  Renovar_European_Insurance_Business_Case.md  Renovar_Startup_Business_Plan.docx  Renovar_Startup_Business_Plan.md  SHARP_BLACK_PATCHES_FIX.md  SHARP_SINGLE_CLASSIC_PLY.md  WALL_MEASUREMENT_YOLOE.md  YOLOE_COREML_FIX.md  abap-ai-toolkit.md  add_letterhead_to_docx.py  apple-review-checklist.md  create_nda_abap_pdf_with_letterhead.py  create_nda_pdf_with_letterhead.py  fix_bottom_letterhead_clipping.py  md_to_docx_renovar.py  paafekt-patent-audit.md  pages_to_docx.py  pages_to_pdf.py  privacy.html  requirements_nda_pdf.txt  update_din_in_docx.py  update_footer_image.py  update_footer_image_in_docx.py
furnit-ml-rag/: .gitignore  README.md  index_all.py  query.py  requirements.txt
room_photos/: IMG_9250.HEIC  livingroom_v2.HEIC
scripts/: DOCKER_CONVERT_README.md  Dockerfile.convert  README_YOLOE_COREML.md  backup_large_files_to_external.sh  backup_to_lacie_folder.sh  build_and_run_convert.sh  compare_yoloe_coreml_ultralytics.py  compare_yoloe_raw_pt_coreml.py  convert_class_array_to_classes_json.py  convert_coreml_to_tflite.py  convert_depthanything_metric_indoor_small_to_coreml.py  convert_depthpro_to_coreml.py  convert_pt_to_tflite.py  convert_yoloe_onnx_to_coreml.py  copy_model_to_assets.sh  docker_convert_entrypoint.sh  docker_convert_onnx_to_tflite.py  download_depthpro_checkpoint.sh  draw_chair_masks_pt_and_coreml.py  draw_mask_yoloe11l_coreml.py  draw_mask_yoloe_pt.py  draw_mask_yoloe_refined.py  emit_classes_batch_txt_to_json.py  environment-yoloe.yml  eval_yoloe26_pf_corners.py  export_pt_to_onnx.py  export_yoloe26_fixed.py  export_yoloe26_onemany_user.py  inspect_pt.py  isolate_yoloe26l_pf_objects.py  list_yoloe26_pf_classes.py  load_pt_with_safe_globals.py  merge_classes_i18n_batches.py  periphery-scan.sh  probe_yoloe26_coreml.py  reexport_yoloe_ane.py  requirements-yoloe-onnx-coreml.txt  requirements.txt  run_depthpro_reference.py  sanity_check_yoloe_seg_o2m_onnx.py  (+13 more)
(+659 files in other folders)
